## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = host_control

host_control_SOURCES = \
	main.c \
	serial.c \
	serial.h \
	joystick.c \
	joystick.h \
	utilities.c \
	control_functions.h \
	control_functions.c \
	utilities.h

host_control_LDFLAGS = 

host_control_LDADD = 

